--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,7 +5,7 @@ backend:
 media_folder: "images/uploads"
 public_folder: "/images/uploads"
 
-site_url: "https://xiche.netlify.app"
+site_url: "https://yexiche.netlify.app"
 
 collections:
   - name: "blog"
