Add optional tags field to config

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -26,6 +26,7 @@ collections:
       - { label: "标题", name: "title", widget: "string" }
       - { label: "发布日期", name: "date", widget: "datetime" }
       - { label: "简介（选填）", name: "excerpt", widget: "text", required: false }
+      - { label: "标签 (选填)", name: "tags", widget: "list", required: false }
       - { label: "封面图片（选填）", name: "cover", widget: "image", required: false }
       - { label: "背景音乐（选填，mp3）", name: "audio", widget: "file", required: false }
       - { label: "正文", name: "body", widget: "markdown" }
